syntax = "proto3";

package book;

service BookService {
  rpc AddBook (AddBookRequest) returns (AddBookResponse) {}
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  string category = 3;
  int32 userId = 4;
}

message AddBookResponse {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string category = 4;
  bool isAvailable = 5;
  int32 userId = 6;
}
