syntax = "proto3";

package users;

service UserService {
  rpc CheckUserExists (CheckUserExistsRequest) returns (CheckUserExistsResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {}
  rpc GetUserProfile (GetProfileRequest) returns (GetProfileResponse) {}
  rpc UpdateUserProfile (UpdateProfileRequest) returns (UpdateProfileResponse) {}
}

message CheckUserExistsRequest {
  string username = 1;
}

message CheckUserExistsResponse {
  bool exists = 1;
}

message CreateUserRequest {
  string name = 1;
  string username = 2;
  string password = 3;
}

message CreateUserResponse {
  string id = 1;
  string username = 2;
}


message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  int32 id = 1;
  string name = 2;
  string username = 3;
  string password = 4;
}


message GetProfileRequest {
  int32 id = 1;
}

message GetProfileResponse {
  int32 id = 1;
  string username = 2;
  string name = 3;
}

message UpdateProfileRequest {
  int32 id = 1;
  string name = 2;
}

message UpdateProfileResponse {
  int32 id = 1;
  string username = 2;
  string name = 3;
}